example/secure-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secure-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      type: test
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 120.132.0.0/16
      ports:
        - protocol: UDP
          port: 5000
    - from:
        - ipBlock:
            cidr: 10.255.0.0/16
        - ipBlock:
            cidr: 10.230.0.0/16
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: UDP
          port: 6379
    - from:
        - ipBlock:
            cidr: 10.240.0.0/16
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - ipBlock:
            cidr: 13.0.0.0/8
      ports:
        - protocol: UDP
          port: 5978
    - to:
        - ipBlock:
            cidr: 15.0.0.0/8
      ports:
        - protocol: TCP
          port: 5400
